refactor: 重构用户逻辑
